--- a/_config.yml
+++ b/_config.yml
@@ -250,9 +250,9 @@ tag_archive:
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
-   enabled:
-     - categories
-     - tags
+#   enabled:
+#     - categories
+#     - tags
 #   layouts:
 #     category: archive-taxonomy
 #     tag: archive-taxonomy
