--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,7 @@
 # main links
 main:
-  - title: "Malware Analysis"
-    url: /categories/#malware-analysis
-  - title: "Binary Exploitation"
-    url: /categories/#binary-exploitation
-  - title: "CTF Writeups"
-    url: /categories/#ctf-writeups
-  - title: "Tutorials"
-    url: /categories/#tutorials
+  - title: "DFIR"
+    url: /categories/#DFIR
   - title: "All Categories"
     url: /categories
   # - title: "Sample Posts"
