--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   - title: "DFIR"
     url: /categories/#DFIR
+  - title: "Memoery Forensics"
+    url: /categories/#Memoery-Forensics
   - title: "All Categories"
     url: /categories
-  # - title: "Sample Posts"
-  #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
