--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       url: "https://www.linkedin.com/in/mohamed-labib-3bb381178/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/m0hamed1112"
+      url: "https://github.com/DetectiveStrings"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
