--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,7 +7,7 @@ jobs:
   jekyll:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses:  DetectiveStrings/DetectiveStrings.github.io 
 
     # Use GitHub Actions' cache to shorten build times and decrease load on servers
     - uses: actions/cache@v2
@@ -18,6 +18,6 @@ jobs:
           ${{ runner.os }}-gems-
 
     # Standard usage
-    - uses:  helaili/jekyll-action@v2
+    - uses:   DetectiveStrings/DetectiveStrings.github.io 
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
